# odoo-fastapi

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  start.sh  test_fastapi.py
app/: __init__.py  config.py  main.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  authorization.py  partners.py  products.py  sales.py
app/core/: __init__.py  config.py  constants.py  security.py
app/schemas/: __init__.py  partner.py  product.py  sale.py
app/services/: odoo.py
